--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Weather-app</title>
     <link href="style.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0/dist/Chart.min.js"></script>
 </head>
 <body>
     <h1>Weather in Tyrnavos City</h1>
@@ -13,6 +14,7 @@
     <hr>
     <p id="desc">description</p>
 
+    <canvas id="chart"></canvas>
     <script src="script.js"></script>
 </body>
 </html>
